# studyRAG

./: .gitignore  compose-chroma-db.yml  compose-mongo-db.yml  compose-qdrant.yml
RAG/: .env  AGENTS.md  Cargo.toml
RAG/files/: plate.stl
RAG/src/: app_state.rs  lib.rs  main.rs
RAG/src/boxed_values/: mod.rs
RAG/src/collection_values/: media.rs  mod.rs
RAG/src/collection_values/embeddables/: document.rs  media.rs  mod.rs
RAG/src/database/: mod.rs  mongodb.rs  qdrant.rs
RAG/src/embeddables/: document.rs  media.rs  mod.rs
RAG/src/embedding/: mod.rs  processer.rs  sparse.rs
RAG/src/embedding/bert_actors/: bert_models.rs  mod.rs
RAG/src/embedding/embedding_actors/: embedding_models.rs  mod.rs
RAG/src/endpoints/: auth.rs  element.rs  embeddable.rs  embeddings.rs  media_information.rs  mod.rs  query.rs
RAG/src/model/: mod.rs  pdf.rs
RAG/src/model/bert_actors/: bert_models.rs  mod.rs  vector_embedding_model.rs
RAG/src/model/values/: mod.rs
RAG/src/services/: element.rs  embeddable.rs  media.rs  mod.rs  pdf_upload.rs  util.rs
RAG/src/util/: file.rs  mod.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Pdf.tsx  constants.ts  index.css  input.tsx
frontend/src/api/: auth.tsx  draggable.tsx  embeddings.tsx  fileInformation.tsx  github.tsx  provider.tsx
frontend/src/components/: AutoExpandingTextArea.tsx  DraggableElement.tsx  FileSelector.tsx  LoginButton.tsx  ModelProvider.tsx  Models.tsx  PDF.tsx  QueryInput.tsx  QueryModal.tsx  ShortCut.tsx  ShortCute.tsx  SystemPrompt.tsx  (+1 more)
qdrant_data/: raft_state.json
(+40 files in other folders)
