[package]
name = "RAG"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-bert = { version="0.23.0", features=["download-libtorch"]}
console = { version = "0.16", features = ["std"] }
lopdf = "0.37.0"
actix-web = "4.11.0"
qdrant-client = "1.15.0"
mongodb = "3.2.4"
bson = "2.15.0"
chrono = "0.4.41"
serde = "1.0.219"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
actix = "0.13.5"
